--- a/environment.yml
+++ b/environment.yml
@@ -6,5 +6,8 @@ dependencies:
   - pip
   - pip:
       - fastapi
+      - langchain
+      - pydantic-settings
+      - python-dotenv
       - sentence-transformers
       - uvicorn[standard]
