feat: implement GameTestAgent with standalone service
GameTestAgent - web game testing and auditing sub-agent:
- Reads PDF gameplay guides (PyMuPDF)
- Automates browser interactions (Playwright)
- Takes screenshots for visual verification
- Audits content for policy compliance

Tools:
- read_pdf: PDF text extraction with page range support
- browser_action: navigate/click/type/scroll/wait/evaluate/content
- take_screenshot: PNG capture + base64 for LLM vision
- audit_content: sensitive text detection + image audit

Standalone modes:
- CLI: game-test-agent test --pdf guide.pdf --url https://game.example.com
- HTTP: game-test-agent serve --port 8080 (FastAPI, optional deps)

Dependencies added: pymupdf, playwright
Optional deps: fastapi, uvicorn, python-multipart (game-test-service)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "loguru>=0.7.0",
     "rich>=13.0.0",
     "croniter>=2.0.0",
+    "pymupdf>=1.24.0",
+    "playwright>=1.40.0",
 ]
 
 [project.optional-dependencies]
@@ -34,9 +36,15 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.0.0",
 ]
+game-test-service = [
+    "fastapi>=0.100.0",
+    "uvicorn>=0.23.0",
+    "python-multipart>=0.0.6",
+]
 
 [project.scripts]
 kubemin-agent = "kubemin_agent.cli.commands:app"
+game-test-agent = "kubemin_agent.agents.game_test.standalone:main"
 
 [build-system]
 requires = ["hatchling"]
