refactor: GameTestAgent 更名为 GameAuditAgent
- 文件重命名: game_test_agent.py -> game_audit_agent.py
- 目录重命名: game_test/ -> game_audit/
- 文档重命名: game-test-agent.md -> game-audit-agent.md
- CLI 命令: game-test-agent -> game-audit-agent
- pyproject.toml: game-test-service -> game-audit-service
- 全部类名/引用/字符串同步更新

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.0.0",
 ]
-game-test-service = [
+game-audit-service = [
     "fastapi>=0.100.0",
     "uvicorn>=0.23.0",
     "python-multipart>=0.0.6",
@@ -43,7 +43,7 @@ game-test-service = [
 
 [project.scripts]
 kubemin-agent = "kubemin_agent.cli.commands:app"
-game-test-agent = "kubemin_agent.agents.game_test.standalone:main"
+game-audit-agent = "kubemin_agent.agents.game_audit.standalone:main"
 
 [build-system]
 requires = ["hatchling"]
