--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "rich>=13.0.0",
     "croniter>=2.0.0",
     "pymupdf>=1.24.0",
+    "chromadb>=0.4.0",
 ]
 
 [project.optional-dependencies]
